--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
     "main": "index.js",
     "type": "module",
     "scripts": {
-        "test": "jest"
+        "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
     },
     "dependencies": {},
     "devDependencies": {
-        "jest": "^27.0.0"
+        "jest": "^29.7.0"
     },
     "author": "",
     "license": "ISC"
